# cose-cmac

./: .gitignore  CMakeLists.txt  README.md  dictionary.txt  draft-sipos-cose-cmac.xml
.github/workflows/: examples.yml  rfc-check.yml
src/: example.py  pyproject.toml  requirements.txt  test_example.py
